# microcli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/microcli/: __init__.py  __main__.py  cli.py  core.py  learn.py  learn_content.py  stdin.py
tests/: __init__.py  test_app.py  test_cli_entry.py  test_cli_integration.py  test_cli_learn.py  test_cli_microcli_patterns.py  test_core.py  test_learn.py  test_stdin.py
